Fix scrollbar appearing in bookmarklet Move scripts to bottom of html

--- a/css/bookmarklet.css
+++ b/css/bookmarklet.css
@@ -1,5 +1,6 @@
 body {
     padding-inline: 1rem;
+    margin: 0;
     font-family: system-ui, -apple-system, 'Segoe UI', sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji';
 }
 
